# magi

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-14-magi.md
docs/superpowers/specs/: 2026-03-14-magi-design.md
magi/: app.py  llm.py  main.py  proposals.py  themes.py  voting.py
magi/widgets/: activity_log.py  header.py  input_bar.py  magi_panel.py  sidebar.py  verdict.py
tests/: test_app.py  test_proposals.py  test_themes.py  test_voting.py
