[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magi"
version = "0.1.0"
description = "MAGI System terminal GUI — Evangelion voting simulator"
requires-python = ">=3.9"
dependencies = ["textual>=0.70.0", "httpx>=0.27.0", "python-dotenv>=1.0"]

[project.scripts]
magi = "magi.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "textual[dev]>=0.70.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
